# SPDX-FileCopyrightText: 2022 - 2023 Peter Urban, Ghent University
#
# SPDX-License-Identifier: CC0-1.0

# -- library setup --
libname = projectnamespace + '_echosounders'
headerdir = projectnamespace + '/echosounders'

# -- source files --
sources = [
  'kongsbergall/datagrams.cpp',
  'kongsbergall/kongsbergallfilehandler.cpp',
  'kongsbergall/types.cpp',
  'kongsbergall/datagrams/attitudedatagram.cpp',
  'kongsbergall/datagrams/clockdatagram.cpp',
  'kongsbergall/datagrams/depthorheightdatagram.cpp',
  'kongsbergall/datagrams/extradetections.cpp',
  'kongsbergall/datagrams/extraparameters.cpp',
  'kongsbergall/datagrams/headingdatagram.cpp',
  'kongsbergall/datagrams/installationparameters.cpp',
  'kongsbergall/datagrams/kongsbergalldatagram.cpp',
  'kongsbergall/datagrams/kongsbergallunknown.cpp',
  'kongsbergall/datagrams/networkattitudevelocitydatagram.cpp',
  'kongsbergall/datagrams/positiondatagram.cpp',
  'kongsbergall/datagrams/puidoutput.cpp',
  'kongsbergall/datagrams/pustatusoutput.cpp',
  'kongsbergall/datagrams/qualityfactordatagram.cpp',
  'kongsbergall/datagrams/rawrangeandangle.cpp',
  'kongsbergall/datagrams/runtimeparameters.cpp',
  'kongsbergall/datagrams/seabedimagedata.cpp',
  'kongsbergall/datagrams/singlebeamechosounderdepth.cpp',
  'kongsbergall/datagrams/soundspeedprofiledatagram.cpp',
  'kongsbergall/datagrams/surfacesoundspeeddatagram.cpp',
  'kongsbergall/datagrams/watercolumndatagram.cpp',
  'kongsbergall/datagrams/xyzdatagram.cpp',
  'kongsbergall/datagrams/substructures/attitudedatagramattitude.cpp',
  'kongsbergall/datagrams/substructures/extradetectionsdetectionclasses.cpp',
  'kongsbergall/datagrams/substructures/extradetectionsextradetections.cpp',
  'kongsbergall/datagrams/substructures/flag_detection_information.cpp',
  'kongsbergall/datagrams/substructures/networkattitudevelocitydatagramattitude.cpp',
  'kongsbergall/datagrams/substructures/rawrangeandanglebeam.cpp',
  'kongsbergall/datagrams/substructures/rawrangeandangletransmitsector.cpp',
  'kongsbergall/datagrams/substructures/seabedimagedatabeam.cpp',
  'kongsbergall/datagrams/substructures/watercolumndatagrambeam.cpp',
  'kongsbergall/datagrams/substructures/watercolumndatagramtransmitsector.cpp',
  'kongsbergall/datagrams/substructures/xyzdatagrambeam.cpp',
  'kongsbergall/filedatatypes/calibration/kongsbergallwatercolumncalibration.cpp',
  'kongsbergall/filedatatypes/_sub/_sysinfos.cpp',
  'kongsbergall/filedatatypes/_sub/_wciinfos.cpp',
  'kongsbergall/filedatatypes/_sub/systeminformation.cpp',
  'kongsbergall/filedatatypes/_sub/watercolumninformation.cpp',
  'simradraw/datagrams.cpp',
  'simradraw/types.cpp',
  'simradraw/datagrams/FIL1.cpp',
  'simradraw/datagrams/MRU0.cpp',
  'simradraw/datagrams/NME0.cpp',
  'simradraw/datagrams/RAW3.cpp',
  'simradraw/datagrams/TAG0.cpp',
  'simradraw/datagrams/XML0.cpp',
  'simradraw/datagrams/simradrawdatagram.cpp',
  'simradraw/datagrams/simradrawunknown.cpp',
  'simradraw/datagrams/xml_datagrams/channelconfiguration.cpp',
  'simradraw/datagrams/xml_datagrams/helper.cpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration.cpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_sensor.cpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_sensor_telegram.cpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_sensor_telegramvalue.cpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_transceiver.cpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_transceiver_channel.cpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_transceiver_channel_frequencypar.cpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_transducer.cpp',
  'simradraw/datagrams/xml_datagrams/xml_environment.cpp',
  'simradraw/datagrams/xml_datagrams/xml_environment_transducer.cpp',
  'simradraw/datagrams/xml_datagrams/xml_initialparameter.cpp',
  'simradraw/datagrams/xml_datagrams/xml_node.cpp',
  'simradraw/datagrams/xml_datagrams/xml_parameter.cpp',
  'simradraw/datagrams/xml_datagrams/xml_parameter_channel.cpp',
  'simradraw/datagrams/xml_datagrams/xml_pingsequence.cpp',
  'simradraw/datagrams/xml_datagrams/xml_pingsequence_ping.cpp',
  'simradraw/datagrams/xml_datagrams/xml_sensor.cpp',
  'simradraw/datagrams/xml_datagrams/xmlconfigurationactivepingmode.cpp',
  'simradraw/datagrams/xml_datagrams/xmlconfigurationtransceiverchanneltransducer.cpp',
  'simradraw/datagrams/raw3datatypes/i_raw3data.cpp',
  'simradraw/datagrams/raw3datatypes/raw3dataangle.cpp',
  'simradraw/datagrams/raw3datatypes/raw3datacomplexfloat32.cpp',
  'simradraw/datagrams/raw3datatypes/raw3datapower.cpp',
  'simradraw/datagrams/raw3datatypes/raw3datapowerandangle.cpp',
  'simradraw/datagrams/raw3datatypes/raw3dataskipped.cpp',
  'simradraw/datagrams/raw3datatypes/raw3datatypes.cpp',
  'simradraw/datagrams/raw3datatypes/t_raw3datatype.cpp',
  'simradraw/filedatacontainers/simradrawfiledatacontainers.cpp',
  'simradraw/filedatatypes/simradrawping.cpp',
  'simradraw/filedatatypes/simradrawpingbottom.cpp',
  'simradraw/filedatatypes/simradrawpingcommon.cpp',
  'simradraw/filedatatypes/simradrawpingfiledata.cpp',
  'simradraw/filedatatypes/simradrawpingwatercolumn.cpp',
  'simradraw/filedatatypes/calibration/functions.cpp',
  'simradraw/filedatatypes/calibration/simradrawwatercolumncalibration.cpp',
  'simradraw/filedatatypes/sub/transceiverinformation.cpp',
  'kmall/datagrams.cpp',
  'kmall/kmallfilehandler.cpp',
  'kmall/types.cpp',
  'kmall/datagrams/cheave.cpp',
  'kmall/datagrams/cposition.cpp',
  'kmall/datagrams/iinstallationparam.cpp',
  'kmall/datagrams/iopruntime.cpp',
  'kmall/datagrams/kmalldatagram.cpp',
  'kmall/datagrams/kmallmultibeamdatagram.cpp',
  'kmall/datagrams/kmallsensordatagram.cpp',
  'kmall/datagrams/kmallunknown.cpp',
  'kmall/datagrams/mrangeanddepth.cpp',
  'kmall/datagrams/mwatercolumn.cpp',
  'kmall/datagrams/sclock.cpp',
  'kmall/datagrams/skmbinary.cpp',
  'kmall/datagrams/sposition.cpp',
  'kmall/datagrams/spositionerror.cpp',
  'kmall/datagrams/ssoundvelocityprofile.cpp',
  'kmall/datagrams/ssoundvelocitytransducer.cpp',
  'kmall/datagrams/substructs/mrzextradetclassinfo.cpp',
  'kmall/datagrams/substructs/mrzpinginfo.cpp',
  'kmall/datagrams/substructs/mrzrxinfo.cpp',
  'kmall/datagrams/substructs/mrzsectorinfo.cpp',
  'kmall/datagrams/substructs/mrzsoundings.cpp',
  'kmall/datagrams/substructs/mrzsoundingscontainer.cpp',
  'kmall/datagrams/substructs/mwcrxbeamdata.cpp',
  'kmall/datagrams/substructs/mwcrxbeamdatacontainer.cpp',
  'kmall/datagrams/substructs/mwcrxinfo.cpp',
  'kmall/datagrams/substructs/mwcsectorinfo.cpp',
  'kmall/datagrams/substructs/mwctxinfo.cpp',
  'kmall/filedatatypes/calibration/kmallwatercolumncalibration.cpp',
  'gsf/datagrams.cpp',
  'gsf/gsffilehandler.cpp',
  'gsf/types.cpp',
  'gsf/datagrams/gsfdatagram.cpp',
  'gsf/datagrams/gsfunknown.cpp',
  'gsf/datagrams/headerdatagram.cpp',
  'filetemplates/i_inputfilehandler.cpp',
  'filetemplates/internal/inputfilemanager.cpp',
  'filetemplates/datacontainers/datagramcontainer.cpp',
  'filetemplates/datacontainers/pingcontainer.cpp',
  'filetemplates/datastreams/mappedfilestream.cpp',
  'filetemplates/datatypes/datagraminfo.cpp',
  'filetemplates/datatypes/filecache.cpp',
  'filetemplates/datatypes/i_ping.cpp',
  'filetemplates/datatypes/i_pingbottom.cpp',
  'filetemplates/datatypes/i_pingcommon.cpp',
  'filetemplates/datatypes/i_pingfiledata.cpp',
  'filetemplates/datatypes/i_pingwatercolumn.cpp',
  'filetemplates/datatypes/cache_structures/fileinfos.cpp',
  'filetemplates/datatypes/cache_structures/filepackagecache.cpp',
  'filetemplates/datatypes/cache_structures/filepackageindex.cpp',
  'filetemplates/datatypes/cache_structures/packagecache.cpp',
  'filetemplates/datatypes/cache_structures/structpackage.cpp',
  'filetemplates/datatypes/calibration/amplitudecalibration.cpp',
  'filetemplates/datatypes/calibration/multisectorwatercolumncalibration.cpp',
  'filetemplates/datatypes/calibration/watercolumncalibration.cpp',
  'pingtools/beamsampleselection.cpp',
  'pingtools/beamselection.cpp',
  'pingtools/pingsampleselector.cpp',
  'pingtools/readsamplerange.cpp',
]

headers = [
  'kongsbergall/datagrams.hpp',
  'kongsbergall/kongsbergallfilehandler.hpp',
  'kongsbergall/types.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallconfigurationdatainterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallconfigurationdatainterfaceperfile.hpp',
  'kongsbergall/filedatainterfaces/kongsbergalldatagramdatainterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergalldatagramdatainterfaceperfile.hpp',
  'kongsbergall/filedatainterfaces/kongsbergalldatagraminterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallenvironmentdatainterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallenvironmentdatainterfaceperfile.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallnavigationdatainterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallnavigationdatainterfaceperfile.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallotherfiledatainterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallotherfiledatainterfaceperfile.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallpingdatainterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallpingdatainterfaceperfile.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallannotationdatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallannotationdatainterfaceperfile.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallconfigurationdatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallconfigurationdatainterfaceperfile.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergalldatagramdatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergalldatagramdatainterfaceperfile.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergalldatagraminterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallenvironmentdatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallenvironmentdatainterfaceperfile.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallnavigationdatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallnavigationdatainterfaceperfile.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallotherfiledatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallotherfiledatainterfaceperfile.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallpingdatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallpingdatainterfaceperfile.doc.hpp',
  'kongsbergall/.docstrings/datagrams.doc.hpp',
  'kongsbergall/.docstrings/kongsbergallfilehandler.doc.hpp',
  'kongsbergall/.docstrings/types.doc.hpp',
  'kongsbergall/datagrams/attitudedatagram.hpp',
  'kongsbergall/datagrams/clockdatagram.hpp',
  'kongsbergall/datagrams/depthorheightdatagram.hpp',
  'kongsbergall/datagrams/extradetections.hpp',
  'kongsbergall/datagrams/extraparameters.hpp',
  'kongsbergall/datagrams/headingdatagram.hpp',
  'kongsbergall/datagrams/installationparameters.hpp',
  'kongsbergall/datagrams/kongsbergalldatagram.hpp',
  'kongsbergall/datagrams/kongsbergallunknown.hpp',
  'kongsbergall/datagrams/networkattitudevelocitydatagram.hpp',
  'kongsbergall/datagrams/positiondatagram.hpp',
  'kongsbergall/datagrams/puidoutput.hpp',
  'kongsbergall/datagrams/pustatusoutput.hpp',
  'kongsbergall/datagrams/qualityfactordatagram.hpp',
  'kongsbergall/datagrams/rawrangeandangle.hpp',
  'kongsbergall/datagrams/runtimeparameters.hpp',
  'kongsbergall/datagrams/seabedimagedata.hpp',
  'kongsbergall/datagrams/singlebeamechosounderdepth.hpp',
  'kongsbergall/datagrams/soundspeedprofiledatagram.hpp',
  'kongsbergall/datagrams/surfacesoundspeeddatagram.hpp',
  'kongsbergall/datagrams/watercolumndatagram.hpp',
  'kongsbergall/datagrams/xyzdatagram.hpp',
  'kongsbergall/datagrams/substructures/attitudedatagramattitude.hpp',
  'kongsbergall/datagrams/substructures/extradetectionsdetectionclasses.hpp',
  'kongsbergall/datagrams/substructures/extradetectionsextradetections.hpp',
  'kongsbergall/datagrams/substructures/flag_detection_information.hpp',
  'kongsbergall/datagrams/substructures/networkattitudevelocitydatagramattitude.hpp',
  'kongsbergall/datagrams/substructures/rawrangeandanglebeam.hpp',
  'kongsbergall/datagrams/substructures/rawrangeandangletransmitsector.hpp',
  'kongsbergall/datagrams/substructures/sampleamplitudesstructure.hpp',
  'kongsbergall/datagrams/substructures/seabedimagedatabeam.hpp',
  'kongsbergall/datagrams/substructures/watercolumndatagrambeam.hpp',
  'kongsbergall/datagrams/substructures/watercolumndatagramtransmitsector.hpp',
  'kongsbergall/datagrams/substructures/xyzdatagrambeam.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/attitudedatagramattitude.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/extradetectionsdetectionclasses.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/extradetectionsextradetections.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/flag_detection_information.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/networkattitudevelocitydatagramattitude.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/rawrangeandanglebeam.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/rawrangeandangletransmitsector.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/sampleamplitudesstructure.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/seabedimagedatabeam.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/watercolumndatagrambeam.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/watercolumndatagramtransmitsector.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/xyzdatagrambeam.doc.hpp',
  'kongsbergall/datagrams/.docstrings/attitudedatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/clockdatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/depthorheightdatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/extradetections.doc.hpp',
  'kongsbergall/datagrams/.docstrings/extraparameters.doc.hpp',
  'kongsbergall/datagrams/.docstrings/headingdatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/installationparameters.doc.hpp',
  'kongsbergall/datagrams/.docstrings/kongsbergalldatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/kongsbergallunknown.doc.hpp',
  'kongsbergall/datagrams/.docstrings/networkattitudevelocitydatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/positiondatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/puidoutput.doc.hpp',
  'kongsbergall/datagrams/.docstrings/pustatusoutput.doc.hpp',
  'kongsbergall/datagrams/.docstrings/qualityfactordatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/rawrangeandangle.doc.hpp',
  'kongsbergall/datagrams/.docstrings/runtimeparameters.doc.hpp',
  'kongsbergall/datagrams/.docstrings/seabedimagedata.doc.hpp',
  'kongsbergall/datagrams/.docstrings/singlebeamechosounderdepth.doc.hpp',
  'kongsbergall/datagrams/.docstrings/soundspeedprofiledatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/surfacesoundspeeddatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/watercolumndatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/xyzdatagram.doc.hpp',
  'kongsbergall/filedatacontainers/kongsbergallpingcontainer.hpp',
  'kongsbergall/filedatacontainers/.docstrings/kongsbergallpingcontainer.doc.hpp',
  'kongsbergall/filedatatypes/kongsbergallping.hpp',
  'kongsbergall/filedatatypes/kongsbergallpingbottom.hpp',
  'kongsbergall/filedatatypes/kongsbergallpingcommon.hpp',
  'kongsbergall/filedatatypes/kongsbergallpingfiledata.hpp',
  'kongsbergall/filedatatypes/kongsbergallpingwatercolumn.hpp',
  'kongsbergall/filedatatypes/calibration/kongsbergallwatercolumncalibration.hpp',
  'kongsbergall/filedatatypes/calibration/.docstrings/kongsbergallwatercolumncalibration.doc.hpp',
  'kongsbergall/filedatatypes/.docstrings/kongsbergallping.doc.hpp',
  'kongsbergall/filedatatypes/.docstrings/kongsbergallpingbottom.doc.hpp',
  'kongsbergall/filedatatypes/.docstrings/kongsbergallpingcommon.doc.hpp',
  'kongsbergall/filedatatypes/.docstrings/kongsbergallpingfiledata.doc.hpp',
  'kongsbergall/filedatatypes/.docstrings/kongsbergallpingwatercolumn.doc.hpp',
  'kongsbergall/filedatatypes/_sub/_sysinfos.hpp',
  'kongsbergall/filedatatypes/_sub/_wciinfos.hpp',
  'kongsbergall/filedatatypes/_sub/systeminformation.hpp',
  'kongsbergall/filedatatypes/_sub/watercolumninformation.hpp',
  'kongsbergall/filedatatypes/_sub/.docstrings/_sysinfos.doc.hpp',
  'kongsbergall/filedatatypes/_sub/.docstrings/_wciinfos.doc.hpp',
  'kongsbergall/filedatatypes/_sub/.docstrings/systeminformation.doc.hpp',
  'kongsbergall/filedatatypes/_sub/.docstrings/watercolumninformation.doc.hpp',
  '.docstrings/kongsbergallfilehandler.doc.hpp',
  '.docstrings/simradrawfilehandler.doc.hpp',
  'simradraw/datagrams.hpp',
  'simradraw/simradrawfilehandler.hpp',
  'simradraw/types.hpp',
  'simradraw/filedatainterfaces/simradrawconfigurationdatainterface.hpp',
  'simradraw/filedatainterfaces/simradrawconfigurationdatainterfaceperfile.hpp',
  'simradraw/filedatainterfaces/simradrawdatagramdatainterface.hpp',
  'simradraw/filedatainterfaces/simradrawdatagramdatainterfaceperfile.hpp',
  'simradraw/filedatainterfaces/simradrawdatagraminterface.hpp',
  'simradraw/filedatainterfaces/simradrawenvironmentdatainterface.hpp',
  'simradraw/filedatainterfaces/simradrawenvironmentdatainterfaceperfile.hpp',
  'simradraw/filedatainterfaces/simradrawnavigationdatainterface.hpp',
  'simradraw/filedatainterfaces/simradrawnavigationdatainterfaceperfile.hpp',
  'simradraw/filedatainterfaces/simradrawotherfiledatainterface.hpp',
  'simradraw/filedatainterfaces/simradrawotherfiledatainterfaceperfile.hpp',
  'simradraw/filedatainterfaces/simradrawpingdatainterface.hpp',
  'simradraw/filedatainterfaces/simradrawpingdatainterfaceperfile.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawannotationdatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawannotationdatainterfaceperfile.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawconfigurationdatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawconfigurationdatainterfaceperfile.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawdatagramdatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawdatagramdatainterfaceperfile.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawdatagraminterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawenvironmentdatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawenvironmentdatainterfaceperfile.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawnavigationdatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawnavigationdatainterfaceperfile.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawotherfiledatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawotherfiledatainterfaceperfile.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawpingdatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawpingdatainterfaceperfile.doc.hpp',
  'simradraw/.docstrings/datagrams.doc.hpp',
  'simradraw/.docstrings/simradrawfilehandler.doc.hpp',
  'simradraw/.docstrings/types.doc.hpp',
  'simradraw/datagrams/FIL1.hpp',
  'simradraw/datagrams/MRU0.hpp',
  'simradraw/datagrams/NME0.hpp',
  'simradraw/datagrams/RAW3.hpp',
  'simradraw/datagrams/TAG0.hpp',
  'simradraw/datagrams/XML0.hpp',
  'simradraw/datagrams/simradrawdatagram.hpp',
  'simradraw/datagrams/simradrawunknown.hpp',
  'simradraw/datagrams/.docstrings/FIL1.doc.hpp',
  'simradraw/datagrams/.docstrings/MRU0.doc.hpp',
  'simradraw/datagrams/.docstrings/NME0.doc.hpp',
  'simradraw/datagrams/.docstrings/RAW3.doc.hpp',
  'simradraw/datagrams/.docstrings/TAG0.doc.hpp',
  'simradraw/datagrams/.docstrings/XML0.doc.hpp',
  'simradraw/datagrams/.docstrings/simradrawdatagram.doc.hpp',
  'simradraw/datagrams/.docstrings/simradrawunknown.doc.hpp',
  'simradraw/datagrams/xml_datagrams/channelconfiguration.hpp',
  'simradraw/datagrams/xml_datagrams/helper.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_sensor.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_sensor_telegram.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_sensor_telegramvalue.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_transceiver.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_transceiver_channel.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_transceiver_channel_frequencypar.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_transducer.hpp',
  'simradraw/datagrams/xml_datagrams/xml_environment.hpp',
  'simradraw/datagrams/xml_datagrams/xml_environment_transducer.hpp',
  'simradraw/datagrams/xml_datagrams/xml_initialparameter.hpp',
  'simradraw/datagrams/xml_datagrams/xml_node.hpp',
  'simradraw/datagrams/xml_datagrams/xml_parameter.hpp',
  'simradraw/datagrams/xml_datagrams/xml_parameter_channel.hpp',
  'simradraw/datagrams/xml_datagrams/xml_pingsequence.hpp',
  'simradraw/datagrams/xml_datagrams/xml_pingsequence_ping.hpp',
  'simradraw/datagrams/xml_datagrams/xml_sensor.hpp',
  'simradraw/datagrams/xml_datagrams/xmlconfigurationactivepingmode.hpp',
  'simradraw/datagrams/xml_datagrams/xmlconfigurationtransceiverchanneltransducer.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/channelconfiguration.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/helper.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_sensor.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_sensor_telegram.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_sensor_telegramvalue.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_transceiver.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_transceiver_channel.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_transceiver_channel_frequencypar.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_transducer.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_environment.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_environment_transducer.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_initialparameter.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_node.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_parameter.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_parameter_channel.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_pingsequence.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_pingsequence_ping.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_sensor.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xmlconfigurationactivepingmode.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xmlconfigurationtransceiverchanneltransducer.doc.hpp',
  'simradraw/datagrams/raw3datatypes/i_raw3data.hpp',
  'simradraw/datagrams/raw3datatypes/raw3dataangle.hpp',
  'simradraw/datagrams/raw3datatypes/raw3datacomplexfloat32.hpp',
  'simradraw/datagrams/raw3datatypes/raw3datapower.hpp',
  'simradraw/datagrams/raw3datatypes/raw3datapowerandangle.hpp',
  'simradraw/datagrams/raw3datatypes/raw3dataskipped.hpp',
  'simradraw/datagrams/raw3datatypes/raw3datatypes.hpp',
  'simradraw/datagrams/raw3datatypes/t_raw3datatype.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/i_raw3data.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/raw3dataangle.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/raw3datacomplexfloat32.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/raw3datapower.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/raw3datapowerandangle.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/raw3dataskipped.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/raw3datatypes.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/t_raw3datatype.doc.hpp',
  'simradraw/filedatacontainers/simradrawfiledatacontainers.hpp',
  'simradraw/filedatacontainers/.docstrings/simradrawfiledatacontainers.doc.hpp',
  'simradraw/filedatatypes/simradrawping.hpp',
  'simradraw/filedatatypes/simradrawpingbottom.hpp',
  'simradraw/filedatatypes/simradrawpingcommon.hpp',
  'simradraw/filedatatypes/simradrawpingfiledata.hpp',
  'simradraw/filedatatypes/simradrawpingwatercolumn.hpp',
  'simradraw/filedatatypes/calibration/functions.hpp',
  'simradraw/filedatatypes/calibration/simradrawwatercolumncalibration.hpp',
  'simradraw/filedatatypes/calibration/.docstrings/functions.doc.hpp',
  'simradraw/filedatatypes/calibration/.docstrings/simradrawwatercolumncalibration.doc.hpp',
  'simradraw/filedatatypes/.docstrings/simradrawping.doc.hpp',
  'simradraw/filedatatypes/.docstrings/simradrawpingbottom.doc.hpp',
  'simradraw/filedatatypes/.docstrings/simradrawpingcommon.doc.hpp',
  'simradraw/filedatatypes/.docstrings/simradrawpingfiledata.doc.hpp',
  'simradraw/filedatatypes/.docstrings/simradrawpingwatercolumn.doc.hpp',
  'simradraw/filedatatypes/sub/transceiverinformation.hpp',
  'simradraw/filedatatypes/sub/.docstrings/transceiverinformation.doc.hpp',
  'kmall/datagrams.hpp',
  'kmall/kmallfilehandler.hpp',
  'kmall/types.hpp',
  'kmall/filedatainterfaces/kmallconfigurationdatainterface.hpp',
  'kmall/filedatainterfaces/kmallconfigurationdatainterfaceperfile.hpp',
  'kmall/filedatainterfaces/kmalldatagramdatainterface.hpp',
  'kmall/filedatainterfaces/kmalldatagramdatainterfaceperfile.hpp',
  'kmall/filedatainterfaces/kmalldatagraminterface.hpp',
  'kmall/filedatainterfaces/kmallenvironmentdatainterface.hpp',
  'kmall/filedatainterfaces/kmallenvironmentdatainterfaceperfile.hpp',
  'kmall/filedatainterfaces/kmallnavigationdatainterface.hpp',
  'kmall/filedatainterfaces/kmallnavigationdatainterfaceperfile.hpp',
  'kmall/filedatainterfaces/kmallotherfiledatainterface.hpp',
  'kmall/filedatainterfaces/kmallotherfiledatainterfaceperfile.hpp',
  'kmall/filedatainterfaces/kmallpingdatainterface.hpp',
  'kmall/filedatainterfaces/kmallpingdatainterfaceperfile.hpp',
  'kmall/filedatainterfaces/.docstrings/kmallconfigurationdatainterface.doc.hpp',
  'kmall/filedatainterfaces/.docstrings/kmallconfigurationdatainterfaceperfile.doc.hpp',
  'kmall/filedatainterfaces/.docstrings/kmalldatagramdatainterface.doc.hpp',
  'kmall/filedatainterfaces/.docstrings/kmalldatagramdatainterfaceperfile.doc.hpp',
  'kmall/filedatainterfaces/.docstrings/kmalldatagraminterface.doc.hpp',
  'kmall/filedatainterfaces/.docstrings/kmallenvironmentdatainterface.doc.hpp',
  'kmall/filedatainterfaces/.docstrings/kmallenvironmentdatainterfaceperfile.doc.hpp',
  'kmall/filedatainterfaces/.docstrings/kmallnavigationdatainterface.doc.hpp',
  'kmall/filedatainterfaces/.docstrings/kmallnavigationdatainterfaceperfile.doc.hpp',
  'kmall/filedatainterfaces/.docstrings/kmallotherfiledatainterface.doc.hpp',
  'kmall/filedatainterfaces/.docstrings/kmallotherfiledatainterfaceperfile.doc.hpp',
  'kmall/filedatainterfaces/.docstrings/kmallpingdatainterface.doc.hpp',
  'kmall/filedatainterfaces/.docstrings/kmallpingdatainterfaceperfile.doc.hpp',
  'kmall/filedatainterfaces/.docstrings/kmlldatagramdatainterface.doc.hpp',
  'kmall/.docstrings/datagrams.doc.hpp',
  'kmall/.docstrings/kmallfilehandler.doc.hpp',
  'kmall/.docstrings/types.doc.hpp',
  'kmall/datagrams/cheave.hpp',
  'kmall/datagrams/cposition.hpp',
  'kmall/datagrams/iinstallationparam.hpp',
  'kmall/datagrams/iopruntime.hpp',
  'kmall/datagrams/kmalldatagram.hpp',
  'kmall/datagrams/kmallmultibeamdatagram.hpp',
  'kmall/datagrams/kmallsensordatagram.hpp',
  'kmall/datagrams/kmallunknown.hpp',
  'kmall/datagrams/mrangeanddepth.hpp',
  'kmall/datagrams/mwatercolumn.hpp',
  'kmall/datagrams/sclock.hpp',
  'kmall/datagrams/skmbinary.hpp',
  'kmall/datagrams/sposition.hpp',
  'kmall/datagrams/spositionerror.hpp',
  'kmall/datagrams/ssoundvelocityprofile.hpp',
  'kmall/datagrams/ssoundvelocitytransducer.hpp',
  'kmall/datagrams/substructs/mrzextradetclassinfo.hpp',
  'kmall/datagrams/substructs/mrzpinginfo.hpp',
  'kmall/datagrams/substructs/mrzrxinfo.hpp',
  'kmall/datagrams/substructs/mrzsectorinfo.hpp',
  'kmall/datagrams/substructs/mrzsoundings.hpp',
  'kmall/datagrams/substructs/mrzsoundingscontainer.hpp',
  'kmall/datagrams/substructs/mwcrxbeamdata.hpp',
  'kmall/datagrams/substructs/mwcrxbeamdatacontainer.hpp',
  'kmall/datagrams/substructs/mwcrxinfo.hpp',
  'kmall/datagrams/substructs/mwcsectorinfo.hpp',
  'kmall/datagrams/substructs/mwctxinfo.hpp',
  'kmall/datagrams/substructs/.docstrings/mrzextradetclassinfo.doc.hpp',
  'kmall/datagrams/substructs/.docstrings/mrzpinginfo.doc.hpp',
  'kmall/datagrams/substructs/.docstrings/mrzrxinfo.doc.hpp',
  'kmall/datagrams/substructs/.docstrings/mrzsectorinfo.doc.hpp',
  'kmall/datagrams/substructs/.docstrings/mrzsoundings.doc.hpp',
  'kmall/datagrams/substructs/.docstrings/mrzsoundingscontainer.doc.hpp',
  'kmall/datagrams/substructs/.docstrings/mwcrxbeamdata.doc.hpp',
  'kmall/datagrams/substructs/.docstrings/mwcrxbeamdatacontainer.doc.hpp',
  'kmall/datagrams/substructs/.docstrings/mwcrxinfo.doc.hpp',
  'kmall/datagrams/substructs/.docstrings/mwcsectorinfo.doc.hpp',
  'kmall/datagrams/substructs/.docstrings/mwctxinfo.doc.hpp',
  'kmall/datagrams/.docstrings/cheave.doc.hpp',
  'kmall/datagrams/.docstrings/cposition.doc.hpp',
  'kmall/datagrams/.docstrings/iinstallationparam.doc.hpp',
  'kmall/datagrams/.docstrings/iopruntime.doc.hpp',
  'kmall/datagrams/.docstrings/kmalldatagram.doc.hpp',
  'kmall/datagrams/.docstrings/kmallmultibeamdatagram.doc.hpp',
  'kmall/datagrams/.docstrings/kmallsensordatagram.doc.hpp',
  'kmall/datagrams/.docstrings/kmallunknown.doc.hpp',
  'kmall/datagrams/.docstrings/mrangeanddepth.doc.hpp',
  'kmall/datagrams/.docstrings/mwatercolumn.doc.hpp',
  'kmall/datagrams/.docstrings/sclock.doc.hpp',
  'kmall/datagrams/.docstrings/skmbinary.doc.hpp',
  'kmall/datagrams/.docstrings/soundvelocityprofile.doc.hpp',
  'kmall/datagrams/.docstrings/soundvelocitytransducer.doc.hpp',
  'kmall/datagrams/.docstrings/sposition.doc.hpp',
  'kmall/datagrams/.docstrings/spositionerror.doc.hpp',
  'kmall/datagrams/.docstrings/ssoundvelocityprofile.doc.hpp',
  'kmall/datagrams/.docstrings/ssoundvelocitytransducer.doc.hpp',
  'kmall/filedatacontainers/kmallpingcontainer.hpp',
  'kmall/filedatacontainers/.docstrings/kmallpingcontainer.doc.hpp',
  'kmall/filedatatypes/kmallping.hpp',
  'kmall/filedatatypes/kmallpingbottom.hpp',
  'kmall/filedatatypes/kmallpingcommon.hpp',
  'kmall/filedatatypes/kmallpingfiledata.hpp',
  'kmall/filedatatypes/kmallpingwatercolumn.hpp',
  'kmall/filedatatypes/calibration/kmallwatercolumncalibration.hpp',
  'kmall/filedatatypes/calibration/.docstrings/kmallwatercolumncalibration.doc.hpp',
  'kmall/filedatatypes/.docstrings/kmallping.doc.hpp',
  'kmall/filedatatypes/.docstrings/kmallpingbottom.doc.hpp',
  'kmall/filedatatypes/.docstrings/kmallpingcommon.doc.hpp',
  'kmall/filedatatypes/.docstrings/kmallpingfiledata.doc.hpp',
  'kmall/filedatatypes/.docstrings/kmallpingwatercolumn.doc.hpp',
  'gsf/datagrams.hpp',
  'gsf/gsffilehandler.hpp',
  'gsf/types.hpp',
  'gsf/filedatainterfaces/gsfdatagraminterface.hpp',
  'gsf/filedatainterfaces/.docstrings/gsfdatagraminterface.doc.hpp',
  'gsf/.docstrings/datagrams.doc.hpp',
  'gsf/.docstrings/gsffilehandler.doc.hpp',
  'gsf/.docstrings/types.doc.hpp',
  'gsf/datagrams/gsfdatagram.hpp',
  'gsf/datagrams/gsfunknown.hpp',
  'gsf/datagrams/headerdatagram.hpp',
  'gsf/datagrams/.docstrings/gsfdatagram.doc.hpp',
  'gsf/datagrams/.docstrings/gsfunknown.doc.hpp',
  'gsf/datagrams/.docstrings/headerdatagram.doc.hpp',
  'filetemplates/i_inputfilehandler.hpp',
  'filetemplates/internal/inputfilemanager.hpp',
  'filetemplates/internal/.docstrings/inputfilemanager.doc.hpp',
  'filetemplates/datacontainers/datagramcontainer.hpp',
  'filetemplates/datacontainers/pingcontainer.hpp',
  'filetemplates/datacontainers/.docstrings/datagramcontainer.doc.hpp',
  'filetemplates/datacontainers/.docstrings/pingcontainer.doc.hpp',
  'filetemplates/.docstrings/i_inputfilehandler.doc.hpp',
  'filetemplates/datastreams/mappedfilestream.hpp',
  'filetemplates/datastreams/.docstrings/mappedfilestream.doc.hpp',
  'filetemplates/datainterfaces/i_configurationdatainterface.hpp',
  'filetemplates/datainterfaces/i_configurationdatainterfaceperfile.hpp',
  'filetemplates/datainterfaces/i_datagraminterface.hpp',
  'filetemplates/datainterfaces/i_environmentdatainterface.hpp',
  'filetemplates/datainterfaces/i_environmentdatainterfaceperfile.hpp',
  'filetemplates/datainterfaces/i_filedatainterface.hpp',
  'filetemplates/datainterfaces/i_filedatainterfaceperfile.hpp',
  'filetemplates/datainterfaces/i_navigationdatainterface.hpp',
  'filetemplates/datainterfaces/i_navigationdatainterfaceperfile.hpp',
  'filetemplates/datainterfaces/i_pingdatainterface.hpp',
  'filetemplates/datainterfaces/i_pingdatainterfaceperfile.hpp',
  'filetemplates/datainterfaces/.docstrings/i_annotationdatainterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_annotationdatainterfaceperfile.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_configurationdatainterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_configurationdatainterfaceperfile.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_datagraminterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_environmentdatainterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_environmentdatainterfaceperfile.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_filedatainterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_filedatainterfaceperfile.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_navigationdatainterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_navigationdatainterfaceperfile.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_pingdatainterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_pingdatainterfaceperfile.doc.hpp',
  'filetemplates/datatypes/datagraminfo.hpp',
  'filetemplates/datatypes/filecache.hpp',
  'filetemplates/datatypes/i_ping.hpp',
  'filetemplates/datatypes/i_pingbottom.hpp',
  'filetemplates/datatypes/i_pingcommon.hpp',
  'filetemplates/datatypes/i_pingfiledata.hpp',
  'filetemplates/datatypes/i_pingwatercolumn.hpp',
  'filetemplates/datatypes/cache_structures/fileinfos.hpp',
  'filetemplates/datatypes/cache_structures/filepackagecache.hpp',
  'filetemplates/datatypes/cache_structures/filepackageindex.hpp',
  'filetemplates/datatypes/cache_structures/packagecache.hpp',
  'filetemplates/datatypes/cache_structures/structpackage.hpp',
  'filetemplates/datatypes/cache_structures/.docstrings/fileinfos.doc.hpp',
  'filetemplates/datatypes/cache_structures/.docstrings/filepackagecache.doc.hpp',
  'filetemplates/datatypes/cache_structures/.docstrings/filepackageindex.doc.hpp',
  'filetemplates/datatypes/cache_structures/.docstrings/packagecache.doc.hpp',
  'filetemplates/datatypes/cache_structures/.docstrings/structpackage.doc.hpp',
  'filetemplates/datatypes/calibration/amplitudecalibration.hpp',
  'filetemplates/datatypes/calibration/multisectorwatercolumncalibration.hpp',
  'filetemplates/datatypes/calibration/watercolumncalibration.hpp',
  'filetemplates/datatypes/calibration/.docstrings/amplitudecalibration.doc.hpp',
  'filetemplates/datatypes/calibration/.docstrings/multisectorwatercolumncalibration.doc.hpp',
  'filetemplates/datatypes/calibration/.docstrings/watercolumncalibration.doc.hpp',
  'filetemplates/datatypes/.docstrings/datagraminfo.doc.hpp',
  'filetemplates/datatypes/.docstrings/filecache.doc.hpp',
  'filetemplates/datatypes/.docstrings/i_ping.doc.hpp',
  'filetemplates/datatypes/.docstrings/i_pingbottom.doc.hpp',
  'filetemplates/datatypes/.docstrings/i_pingcommon.doc.hpp',
  'filetemplates/datatypes/.docstrings/i_pingfiledata.doc.hpp',
  'filetemplates/datatypes/.docstrings/i_pingwatercolumn.doc.hpp',
  'pingtools/beamsampleselection.hpp',
  'pingtools/beamselection.hpp',
  'pingtools/pingsampleselector.hpp',
  'pingtools/readsamplerange.hpp',
  'pingtools/.docstrings/beamsampleselection.doc.hpp',
  'pingtools/.docstrings/beamselection.doc.hpp',
  'pingtools/.docstrings/pingsampleselector.doc.hpp',
  'pingtools/.docstrings/readsamplerange.doc.hpp',
]

# -- targets --
# for now force static linking on windows
if build_machine.system() != 'linux'
  echosounders_lib = static_library(
    libname,
    sources,
    dependencies: [boost_dep, pugixml_dep, tools_dep, navigation_dep, algorithms_dep],
    cpp_pch: '../../pch/echosounders_themachinethatgoesping_echosounders.hpp',
    override_options: ['b_lundef=false'],
    install: true,
    install_tag: 'library',
  )
else
  echosounders_lib = library(
    libname,
    sources,
    dependencies: [boost_dep, pugixml_dep, tools_dep, navigation_dep, algorithms_dep],
    cpp_pch: '../../pch/echosounders_themachinethatgoesping_echosounders.hpp',
    override_options: ['b_lundef=false'],
    install: true,
    install_tag: 'library',
  )
endif

# -- internal dependency --
echosounders_dep = declare_dependency(
  dependencies: [boost_dep, pugixml_dep, tools_dep, navigation_dep, algorithms_dep],
  link_with: [echosounders_lib],
  include_directories: ['../../'],
)

# -- installation setup --

# install headers
if headers != ['']
  install_headers(headers, subdir: headerdir + '/', preserve_path: true)
endif

# # create pkgconfig file
# pkg = import('pkgconfig')
# pkg.generate(echosounders_lib,
#              description : 'Library for reading, writing and processing single- and multibeam echsounder data formats.',
#              url : 'https://github.com/themachinethatgoesping/echosounders')